chore: add generated dependency graph visualizations and update documentation.

--- a/site/content/docs/index.mdx
+++ b/site/content/docs/index.mdx
@@ -15,6 +15,10 @@ Everything you need to know about using XibeCode — the autonomous AI coding as
 - **MCP** Protocol Support
 - **Open Source** (Apache 2.0)
 
+## Dependency Map
+
+![Dependency Map](/dependencies.svg)
+
 ## Getting Started
 
 <Cards>
